--- a/client-server/views/index.ejs
+++ b/client-server/views/index.ejs
@@ -837,11 +837,10 @@
 
   </div>
 
-
+  <script src="classes/HttpRequest.js"></script>
   <script src="utils/Utils.js"></script>
   <script src="models/User.js"></script>
   <script src="controllers/UserController.js"></script>
   <script src="index.js"></script>
 </body>
-
 </html>
